--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ hr {
 .header-left {
   flex: 1;
   text-align: center; 
+  flex-basis: 45%;
 }
 
 .header-right {
   flex: 2;
   text-align: left;
+  flex-basis: 55%;
 }
 
 .profile-image {
@@ -159,6 +161,53 @@ a:hover {
 
 
 /* Медиа-запросы */
+
+@media (max-width: 1055px) {
+  .header {
+    flex-direction: column; 
+    text-align: center;
+}
+
+.header-left {
+    margin-bottom: 20px; 
+}
+
+.header-right h1 {
+    font-size: 24px; 
+    text-align: center;
+}
+
+.header-right h2 {
+    font-size: 18px;
+    text-align: center;
+}
+
+.content {
+    flex-direction: column; 
+}
+
+.profile-card {
+    padding-left: 20px;
+}
+
+.left-column,
+.right-column {
+    width: 100%;
+}
+.left-column {
+    margin-bottom: 60px;
+    margin-left: 0;
+}
+
+.skills-grid {
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); 
+}
+
+.square-image {
+    width: 80px;
+}
+
+}
 @media (max-width: 976px) {
   .header {
       flex-direction: column; 
@@ -203,6 +252,7 @@ a:hover {
   }
 }
 
+
 @media (max-width: 768px) {
   .header {
       flex-direction: column; 
@@ -214,11 +264,11 @@ a:hover {
   }
 
   .header-right h1 {
-      font-size: 24px; 
+      font-size: 22px; 
   }
 
   .header-right h2 {
-      font-size: 18px;
+      font-size: 17px;
   }
 
   .content {
@@ -249,6 +299,9 @@ a:hover {
   .header-right h2 { 
       font-size: 16px; 
   } 
+  .profile-image {
+    margin-right: 0;
+  }
   .skills-grid span { 
       font-size: 12px; 
   } 
@@ -277,13 +330,18 @@ a:hover {
   .header-right h2 { 
       font-size: 14px; 
   } 
+  .profile-image {
+    margin-right: 0;
+    width: 170px;
+    height: 170px;
+  }
   .skills-grid span { 
       font-size: 10px; 
   } 
   .left-column, .right-column { 
       width: 100%; 
-      margin-left: 0 !important;  
-      margin-right: 0 !important; 
+      margin-left: 0 ;  
+      margin-right: 0 ; 
       margin-bottom: 40px; 
 
       min-width: auto;
@@ -300,6 +358,11 @@ a:hover {
 
   .header-right h2 {
       font-size: 12px;
+  }
+  .profile-image {
+    margin-left: 0;
+    width: 140px;
+    height: 140px;
   }
 
   .skills-grid span {
